--- a/index.html
+++ b/index.html
@@ -4498,10 +4498,10 @@ ${hnwFinancially || ''}`;
             }, [sumAssured, curr, planName, targetSavingHKD, prodType]);
 
             const returnCheck = useMemo(() => {
-    // ===== Suitability Check (95% Rule + FNA Mapping) =====
+    // ===== Suitability Check (Reference Only for FNA Mapping) =====
     const issues = [];
 
-    // --- A) Existing 95% Rule (Target Saving vs Surrender Value) ---
+    // --- A) 95% Rule (Target Saving vs Surrender Value) ---
     let targetStatus = null;
     if (targetSavingHKD && surrenderValueUSD) {
         const target = Number(targetSavingHKD);
@@ -4510,126 +4510,19 @@ ${hnwFinancially || ''}`;
         if (targetStatus === "FAIL") issues.push("退保價值低於目標儲蓄 95% (95% Rule FAIL)");
     }
 
-    // --- B) FNA Mapping (Part 2 Q1/Q2/Q3 vs Selected Plan) ---
+    // --- B) FNA Mapping: Reference display only (no user selection / no pass-fail) ---
     let fnaStatus = null;
     const prod = selectedProductData;
-    const hasMapping = !!(prod && (prod.q1 || prod.q2 || prod.q3));
+    const hasMapping = !!(prod && (prod.q1 || prod.q2 || prod.q3 || prod.q6));
     if (!noFna && hasMapping) {
-        const parseTokens = (raw) => {
-            if (!raw) return { required: [], optional: [], orGroup: null, deps: [] };
-            // handle inline note: ** If D is selected, E must also be selected **
-            const dep = /If\s+D\s+is\s+selected,\s*E\s+must\s+also\s+be\s+selected/i.test(raw);
-            const cleaned = raw.replace(/\*\*.*?\*\*/g, "").trim();
-
-            const tokens = cleaned.split(",").map(s => s.trim()).filter(Boolean);
-            const required = [];
-            const optional = [];
-            let orGroup = null;
-
-            tokens.forEach(t => {
-                // "C and/or D"
-                if (/and\/or/i.test(t)) {
-                    const parts = t.split(/and\/or/i).map(x => x.trim()).filter(Boolean);
-                    if (parts.length >= 2) orGroup = parts;
-                    return;
-                }
-                const isOptional = /\(\s*Optional\s*\)/i.test(t);
-                const val = t.replace(/\(\s*Optional\s*\)/i, "").trim();
-                if (!val) return;
-                if (isOptional) optional.push(val);
-                else required.push(val);
-            });
-
-            const deps = [];
-            if (dep) deps.push({ ifHas: "D", mustAlsoHave: "E" });
-
-            return { required, optional, orGroup, deps };
-        };
-
-        const parseRange = (raw) => {
-            if (!raw) return [];
-            const r = raw.trim();
-            const m = r.match(/^([A-G])\s*-\s*([A-G])$/i);
-            if (m) {
-                const a = m[1].toUpperCase().charCodeAt(0);
-                const b = m[2].toUpperCase().charCodeAt(0);
-                const out = [];
-                for (let c = a; c <= b; c++) out.push(String.fromCharCode(c));
-                return out;
-            }
-            return r.split(/[,;]/).map(x => x.trim()).filter(Boolean);
-        };
-
-        const q1Rules = parseTokens(prod.q1);
-        const q2Allowed = parseRange(prod.q2);
-        const q3Allowed = parseRange(prod.q3);
-
-        // Q1 (multi-select)
-        if (!Array.isArray(fnaP2Q1) || fnaP2Q1.length === 0) {
-            fnaStatus = "FAIL";
-            issues.push("請完成 FNA Part 2 Q1 (Reason for purchase)");
-        } else {
-            const selected = fnaP2Q1.map(x => String(x).trim());
-            const allowedSet = new Set([...(q1Rules.required || []), ...(q1Rules.optional || []), ...(q1Rules.orGroup || [])]);
-            const invalid = selected.filter(x => !allowedSet.has(x));
-            if (invalid.length) {
-                fnaStatus = "FAIL";
-                issues.push(`FNA Part 2 Q1 選項不符合此計劃: ${invalid.join(", ")}`);
-            }
-            const missingReq = (q1Rules.required || []).filter(x => !selected.includes(x));
-            if (missingReq.length) {
-                fnaStatus = "FAIL";
-                issues.push(`FNA Part 2 Q1 缺少必選: ${missingReq.join(", ")}`);
-            }
-            if (q1Rules.orGroup && q1Rules.orGroup.length) {
-                const ok = q1Rules.orGroup.some(x => selected.includes(x));
-                if (!ok) {
-                    fnaStatus = "FAIL";
-                    issues.push(`FNA Part 2 Q1 需選其一: ${q1Rules.orGroup.join(" / ")}`);
-                }
-            }
-            (q1Rules.deps || []).forEach(d => {
-                if (selected.includes(d.ifHas) && !selected.includes(d.mustAlsoHave)) {
-                    fnaStatus = "FAIL";
-                    issues.push(`FNA Part 2 Q1：如選 ${d.ifHas} 必須同時選 ${d.mustAlsoHave}`);
-                }
-            });
-        }
-
-        // Q2 (single-select)
-        if (!fnaP2Q2) {
-            fnaStatus = fnaStatus || "FAIL";
-            issues.push("請完成 FNA Part 2 Q2");
-        } else if (q2Allowed.length && !q2Allowed.includes(fnaP2Q2)) {
-            fnaStatus = "FAIL";
-            issues.push(`FNA Part 2 Q2 不符合此計劃 (需要: ${q2Allowed.join(", ")})`);
-        }
-
-        // Q3 (single-select)
-        if (!fnaP2Q3) {
-            fnaStatus = fnaStatus || "FAIL";
-            issues.push("請完成 FNA Part 2 Q3 (Type of insurance)");
-        } else if (q3Allowed.length && !q3Allowed.includes(fnaP2Q3)) {
-            fnaStatus = "FAIL";
-            issues.push(`FNA Part 2 Q3 不符合此計劃 (需要: ${q3Allowed.join(", ")})`);
-        }
-
-        // Q6 (optional strictness — only validate if user inputs)
-        if (fnaP3Q6 && prod.q6) {
-            const q6Allowed = parseRange(prod.q6);
-            if (q6Allowed.length && !q6Allowed.includes(fnaP3Q6)) {
-                fnaStatus = "FAIL";
-                issues.push(`FNA Part 3 Q6 不符合此計劃 (參考: ${prod.q6})`);
-            }
-        }
-
-        if (!fnaStatus) fnaStatus = "PASS";
+        fnaStatus = "REFERENCE";
     }
 
     let status = "PASS";
-    if (targetStatus === "FAIL" || fnaStatus === "FAIL") status = "FAIL";
+    if (targetStatus === "FAIL") status = "FAIL";
     return { status, targetStatus, fnaStatus, issues };
 }, [targetSavingHKD, surrenderValueUSD, selectedProductData, noFna, fnaP2Q1, fnaP2Q2, fnaP2Q3, fnaP3Q6]);
+
 
             const medicalReq = useMemo(() => {
                 const checkAge = insuredAgeForCalc;
@@ -5550,7 +5443,7 @@ ${hnwFinancially || ''}`;
                                                 <>
                                                 <div className={`p-3 rounded border text-sm font-bold flex items-center gap-2 ${returnCheck.status==='PASS'?'bg-green-50 border-green-200 text-green-700':'bg-red-50 border-red-200 text-red-700'}`}>
                                                     {returnCheck.status==='PASS' ? <Check size={16}/> : <AlertTriangle size={16}/>}
-                                                    {returnCheck.status==='PASS' ? '適當性檢查通過 (FNA Mapping / 95% Rule)' : '適當性檢查未通過 (請查看原因)'}
+                                                    {returnCheck.status==='PASS' ? '適當性檢查通過 (95% Rule)' : '適當性檢查未通過 (95% Rule - 請查看原因)'}
                                                 </div>
                                                     {returnCheck.issues && returnCheck.issues.length > 0 && (
                                                         <ul className="mt-2 list-disc pl-5 text-[11px] space-y-1">
